--- a/simulation-one/src/App.css
+++ b/simulation-one/src/App.css
@@ -22,3 +22,69 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.dark-red-bgc {
+  background-color: #ab2a19;
+}
+
+.shelves_parent_container{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  min-height: 800px;
+  min-width: 655px;
+}
+
+.shelves_header {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header_content {
+  width: auto;
+  height: auto;
+  position: relative;
+  left: -165px;
+}
+
+.header_logo {
+  position: relative;
+  top: 13px;
+  margin-right: 10px;
+}
+
+.shelves_header_span {
+  font-weight: 700;
+  font-family: sans-serif;
+  color: #fff;
+  font-size: 30px;
+}
+
+.shelves_child_container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+.shelf_container {
+  width: 500px;
+  height: 60px;
+  margin-bottom: 20px;
+  border-radius: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  cursor: pointer;
+  color: #fff;
+  font-weight: 700;
+}
+
+.light-red-bgc {
+  background-color: #d34735
+}
