--- a/simulation-one/src/App.css
+++ b/simulation-one/src/App.css
@@ -23,6 +23,29 @@
   to { transform: rotate(360deg); }
 }
 
+.main-wrapper {
+  position: fixed;
+  top: 8rem;
+  width: 100%;
+}
+
+.shelf-list {
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+}
+
+.shelf-button {
+  background: #D35735;
+  border-radius: 5px;
+  margin-bottom: 1rem;
+  font-size: 2rem;
+  color: white;
+  padding: 0.5rem 4rem;
+  text-decoration: none;
+}
+
+
 .dark-red-bgc {
   background-color: #ab2a19;
 }
